--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             <button id="save-btn" onclick="save()">SAVE</button>
             <button id="reset-btn" onclick="reset()">RESET</button>
             <p id="save-el">Previous entries: </p>
+            <p>Previous entries:<a id="save-el"></a> </p>
         </div>
         <script src="index.js">
             nnerText
